Elasticsearch / Proxy / More robust filter processing (#9302)
This change includes a more robust filter processing and other code quality improvements in the Elasticseach proxy.


Co-authored-by: François Prunayre <fx.prunayre@gmail.com>